<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/da_white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iqonic.datingapp.activity.DAUserDetailActivity"
    tools:showIn="@layout/activity_dauser_detail"
    >

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_below="@id/llHead"
        android:layout_above="@id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/da_spacing_middle"
        android:layout_marginBottom="@dimen/da_spacing_standard_new">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_melanie_23"
            android:textSize="@dimen/da_font_size_xxlarge"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/DAFontBold"
            android:textStyle="bold"
            android:textColor="@color/da_red"/>
        <TextView
            android:id="@+id/tvDisatance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tvName"
            android:layout_alignBottom="@id/tvName"
            android:gravity="center"
            android:text="@string/da_2_km"
            android:drawableStart="@drawable/da_ic_paper_plane"
            android:drawableTint="@color/da_textColorSecondary"
            android:drawablePadding="@dimen/da_spacing_standard"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/da_font_size_normal"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:layout_gravity="center_vertical"
            android:textColor="@color/da_textColorPrimary"/>
        <TextView
            android:id="@+id/tvProfession"
            android:layout_below="@id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_art_director"
            android:drawableStart="@drawable/da_ic_business_briefcase"
            android:layout_marginTop="@dimen/da_spacing_control"
            android:drawableTint="@color/da_textColorSecondary"
            android:drawablePadding="@dimen/da_spacing_standard"
            android:textSize="@dimen/da_font_size_normal"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_gravity="center_vertical"
            android:textColor="@color/da_textColorPrimary"/>
        <TextView
            android:id="@+id/tvDetail"
            android:layout_below="@id/tvProfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_text"
            android:lineSpacingExtra="@dimen/da_spacing_control_half"
            android:layout_marginTop="@dimen/da_spacing_standard_new"
            android:drawablePadding="@dimen/da_spacing_standard"
            android:textSize="@dimen/da_font_size_normal"
            android:lines="5"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_gravity="center_vertical"
            android:textColor="@color/da_textColorPrimary"/>
        <TextView
            android:id="@+id/txtLanguage"
            android:layout_marginTop="@dimen/da_spacing_large"
            style="@style/DAEditTextHint"
            android:layout_below="@id/tvDetail"
            android:textSize="@dimen/da_font_size_normal"
            android:text="@string/da_language" />

        <TextView
            android:id="@+id/tvLang"
            style="@style/ProfileText"
            android:layout_marginTop="@dimen/da_spacing_control"
            android:layout_below="@id/txtLanguage"
            android:text="@string/da_english_german_french" />
        <TextView
            android:id="@+id/txtLocation"
            android:layout_marginTop="@dimen/da_spacing_large"
            style="@style/DAEditTextHint"
            android:layout_below="@id/tvLang"
            android:textSize="@dimen/da_font_size_normal"
            android:text="@string/da_location" />

        <TextView
            android:id="@+id/tvLocation"
            style="@style/ProfileText"
            android:layout_marginTop="@dimen/da_spacing_control"
            android:layout_below="@id/txtLocation"
            android:text="@string/da_shipley_bradford" />
        <LinearLayout
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_85sdp">
            <TextView
                android:id="@+id/tvShare"
                style="@style/ProfileText"
                android:textColor="@color/da_red"
                android:gravity="center_horizontal"
                android:text="@string/share_profile" />
            <View style="@style/Divider" />
            <TextView
                android:id="@+id/tvReport"
                style="@style/ProfileText"
                android:textColor="@color/da_red"
                android:gravity="center_horizontal"
                android:text="@string/da_report" />

        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
