<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/da_white"
    android:fillViewport="true"
    tools:context=".activity.DAWalkThroughActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/DAHeading"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/da_hello" />

        <TextView
            style="@style/DASubHeading"
            android:text="@string/da_lbl_login_to_your_account" />

        <LinearLayout
            android:id="@+id/llMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:background="@drawable/da_edittext"
            android:orientation="horizontal"
            android:padding="@dimen/da_spacing_standard">

            <com.hbb20.CountryCodePicker
                android:id="@+id/counryCodePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/da_spacing_small"
                android:paddingEnd="@dimen/da_spacing_small"
                app:ccp_arrowColor="@color/da_textColorPrimary"
                app:ccp_contentColor="@color/da_colorPrimary"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="false" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="@dimen/da_spacing_mlarge"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/da_spacing_small"
                android:layout_marginBottom="@dimen/da_spacing_small"
                android:background="@color/da_colorPrimary" />

            <EditText
                android:id="@+id/edMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/da_hint_mobile"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="@dimen/da_spacing_standard"
                android:paddingEnd="@dimen/da_spacing_standard"
                android:textColor="@color/da_textColorPrimary"
                android:textColorHint="@color/da_textColorThird" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSignIn"
            style="@style/DAMaterialButtonStyle.Enabled"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:layout_marginBottom="@dimen/da_spacing_xlarge"
            android:text="@string/da_next"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginEnd="@dimen/da_spacing_large">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/tvConnectWith"
                android:background="@color/da_view_color" />

            <TextView
                android:id="@+id/tvConnectWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/da_spacing_control"
                android:layout_marginEnd="@dimen/da_spacing_control"
                android:text="@string/da_or_connect_with"
                android:textAppearance="@style/DAFontMedium"
                android:textColor="@color/da_textColorSecondary"
                android:textSize="@dimen/da_font_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tvConnectWith"
                android:background="@color/da_view_color" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnLoginFB"
            style="@style/DAMaterialButtonStyle.Enabled"
            android:layout_margin="@dimen/da_spacing_large"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:layout_marginBottom="@dimen/da_spacing_large"
            android:backgroundTint="@color/da_fb_blue"
            android:drawableStart="@drawable/da_ic_facebook"
            android:gravity="center"
            android:paddingStart="@dimen/da_spacing_large"
            android:paddingEnd="@dimen/da_spacing_large"
            android:text="@string/da_fb_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnLoginGoogle"
            style="@style/DAMaterialButtonStyle.Enabled"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:layout_marginBottom="@dimen/da_spacing_xlarge"
            android:backgroundTint="@color/da_google_red"
            android:drawableStart="@drawable/da_ic_google_fill"
            android:gravity="center"
            android:paddingStart="@dimen/da_spacing_large"
            android:paddingEnd="@dimen/da_spacing_large"
            android:text="@string/da_google_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</ScrollView>