<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/da_white"
    tools:context=".activity.DAWalkThroughActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBack"
            style="@style/DABackIcon"/>

        <TextView
            android:layout_marginTop="@dimen/da_spacing_standard"
            style="@style/DAHeading"
            android:text="@string/da_lbl_forget_password" />

        <TextView
            style="@style/DASubHeading"
            android:text="@string/da_lbl_fp_note" />


        <LinearLayout
            android:id="@+id/llMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:background="@drawable/da_edittext"
            android:padding="@dimen/da_spacing_standard"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/da_spacing_small"
                android:paddingEnd="@dimen/da_spacing_small"
                app:ccp_contentColor="@color/da_colorPrimary"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="false" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="@dimen/da_spacing_mlarge"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/da_spacing_small"
                android:layout_marginBottom="@dimen/da_spacing_small"
                android:background="@color/da_colorPrimary" />

            <EditText
                android:id="@+id/edMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:ems="10"
                android:maxLength="10"
                android:hint="@string/da_hint_mobile"
                android:inputType="number"
                android:textColorHint="@color/da_textColorThird"
                android:paddingStart="@dimen/da_spacing_standard"
                android:paddingEnd="@dimen/da_spacing_standard"
                android:textColor="@color/da_textColorPrimary" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSend"
                style="@style/DAMaterialButtonStyle.Enabled"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/da_spacing_large"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/da_spacing_large"
                android:layout_marginBottom="@dimen/da_spacing_xlarge"
                android:text="@string/da_send"
                android:textAllCaps="true" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>