<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/da_profile_2"
        android:scaleType="centerCrop" />
    <ImageView
        android:id="@+id/ivBack"
        android:padding="@dimen/da_spacing_control"
        android:src="@drawable/da_ic_close"
        android:tint="@color/da_white"
        style="@style/DABackIcon"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/da_gradation_black"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/da_spacing_xxxlarge"
        android:paddingBottom="@dimen/da_spacing_xlarge">
        <TextView
            android:id="@+id/tvName"
            style="@style/DAHeading"
            android:textColor="@color/da_white"
            android:text="@string/da_william_26"
            />
        <TextView
            android:id="@+id/tvProfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:textAppearance="@style/DAFontSemiBold"
            android:layout_below="@id/tvName"
            android:textSize="@dimen/da_font_size_xlarge"
            android:textColor="@color/da_white"
            android:text="@string/da_profession"
            />
        <TextView
            android:id="@+id/tvAbout"
            android:layout_toStartOf="@id/ivEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/da_spacing_large"
            android:layout_marginStart="@dimen/da_spacing_large"
            android:layout_marginEnd="@dimen/da_spacing_large"
            android:textAppearance="@style/DAFontSemiBold"
            android:layout_below="@id/tvProfession"
            android:textSize="@dimen/da_font_size_large"
            android:textColor="@color/da_white"
            android:text="@string/da_about"
            />
         <ImageView
             android:id="@+id/ivEdit"
             android:layout_width="@dimen/_45sdp"
             android:layout_height="@dimen/_45sdp"
             android:layout_marginEnd="@dimen/da_spacing_large"
             android:layout_alignParentEnd="true"
             android:layout_alignTop="@id/tvAbout"
             android:tint="@color/da_white"
             android:padding="@dimen/da_spacing_middle"
             android:background="@drawable/da_circle_redprimary"
             android:src="@drawable/da_ic_mode_edit_black_24dp"/>
    </RelativeLayout>
</RelativeLayout>